syntax="proto3";

package filter;

import "google/protobuf/empty.proto";
import "entity.proto";
import "dto.proto";

service FilterService {
  rpc FetchBrands(dto.FetchRequest) returns (FetchBrandsResponse);
  rpc SearchManufacturerCountries(SearchManufacturerCountriesRequest) returns (FetchManufacturerCountriesResponse);
  rpc FetchManufacturerCountries(dto.FetchRequest) returns (FetchManufacturerCountriesResponse);
}

//request--------------------------------------

//responses--------------------------------------

message FetchBrandsResponse {
  repeated entity.Brand data = 1;
}

message SearchManufacturerCountriesRequest {
  optional string name = 1;
  optional dto.FetchRequest fetch_dto = 2;
}

message FetchManufacturerCountriesResponse {
  repeated entity.ManufacturerCountry data = 1;
}